新的添加日程ui

--- a/calculator.ui
+++ b/calculator.ui
@@ -42,7 +42,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="iconSize">
        <size>
@@ -959,10 +959,16 @@
           </property>
           <item>
            <widget class="QPushButton" name="addtodo">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
-              <width>300</width>
-              <height>300</height>
+              <width>500</width>
+              <height>500</height>
              </size>
             </property>
             <property name="font">
