--- a/calendar.ui
+++ b/calendar.ui
@@ -121,7 +121,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox">
+          <widget class="QComboBox" name="advEdit">
            <property name="font">
             <font>
              <family>等线 Light</family>
@@ -153,7 +153,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="comboBox_2">
+        <widget class="QComboBox" name="freqEdit">
          <property name="font">
           <font>
            <family>等线 Light</family>
