--- a/calculator.ui
+++ b/calculator.ui
@@ -17,7 +17,7 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="minimumSize">
@@ -951,23 +951,68 @@
        <attribute name="title">
         <string>日程表</string>
        </attribute>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout">
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
           <property name="spacing">
-           <number>90</number>
+           <number>50</number>
           </property>
           <item>
            <widget class="QCalendarWidget" name="calendarWidget"/>
           </item>
           <item>
-           <widget class="QListWidget" name="tasklist">
-            <property name="font">
-             <font>
-              <family>Adobe Devanagari</family>
-              <pointsize>14</pointsize>
-             </font>
+           <widget class="QSplitter" name="splitter_2">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <widget class="QPushButton" name="addButton">
+             <property name="font">
+              <font>
+               <family>SimSun</family>
+               <pointsize>14</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>添加新日程</string>
+             </property>
+            </widget>
+            <widget class="QListWidget" name="tasklist">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>450</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <family>Adobe Devanagari</family>
+               <pointsize>14</pointsize>
+              </font>
+             </property>
+            </widget>
+            <widget class="QPushButton" name="deleteButton">
+             <property name="font">
+              <font>
+               <family>Adobe Devanagari</family>
+               <pointsize>14</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>删除日程</string>
+             </property>
+            </widget>
            </widget>
           </item>
          </layout>
