--- a/calculator.ui
+++ b/calculator.ui
@@ -958,7 +958,11 @@
            <number>50</number>
           </property>
           <item>
-           <widget class="QCalendarWidget" name="calendarWidget"/>
+           <widget class="QCalendarWidget" name="calendarWidget">
+            <property name="gridVisible">
+             <bool>true</bool>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="QSplitter" name="splitter_2">
